# clean-duke

src/: duke3d.h  game.c  gamedef.c  global.c  player.c  premap.c  sector.c
src/actors/src/: actors.c  p_interpolation.c  p_weapon.c
src/audiolib/: CMakeLists.txt
src/audiolib/include/audiolib/: music.h  pitch.h
src/audiolib/src/: dpmi.c  dsl.c  fx_man.c  ll_man.c  multivoc.c  mv_mix.c  mvreverb.c  pitch.c  sdl_midi.c  sounds.c
src/automap/src/: am_main.c  am_overhead.c  am_view.c
src/con/src/compiler/: com_main.c
src/con/src/compiler/cmds/: com_include.c
src/con/src/vm/: vm_dodge.c  vm_main.c  vm_move.c
src/con/src/vm/ops/: vm_ai.c  vm_debris.c  vm_fall.c  vm_glass.c  vm_if.c  vm_if_plr.c  vm_ifcansee.c  vm_move.c  vm_operate.c  vm_plr_health.c  vm_plr_stomp.c  vm_reset_plr.c  vm_size.c  vm_target.c  vm_water.c
src/config/: CMakeLists.txt
src/config/src/: config.c  scriplib.c  scriplib.h
src/console/: CMakeLists.txt
src/console/src/: console.c  cvar_defs.c  cvars.c
src/hud/src/: hu_draw.c  hu_main.c  hu_statusbar.c  hu_text.c
src/input/: CMakeLists.txt
src/input/src/: control.c  joystick.c  keyboard.c  mouse.c
src/memory/: CMakeLists.txt
src/memory/src/: cache.c
src/menu/: CMakeLists.txt
src/menu/src/: animlib.c  animlib.h  menu.c
src/physics/src/: physics.c
src/renderer/include/renderer/: renderer.h
src/renderer/src/: r_draw.c  r_main.c  r_mirror.c  r_sprite.c  r_wall.c
src/rts/: CMakeLists.txt
src/rts/src/: _rts.h  rts.c
src/video/: CMakeLists.txt
src/video/include/video/: display.h  mode.h  palette.h
src/video/src/: vid_display.c  vid_mode.c  vid_palette.c
